-Restructured directories to work with Flask (added ./static/stylesheets) -did some more work with building the requester in js and the responder in py -wrapped the table-fields in an extra div that should have been there originally 	-updated CSS classes accordingly; renamed one and fixed flexing -contenteditable div is now a textarea, because it saves having to deal with the html tags that would get added. -Now will be shifting focus to rewriting the backend script and adapting it to work with this project

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -73,15 +73,22 @@ body {
   justify-content: center;
 }
 
-.company {
+.table-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.table-row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .table-field {
+
   background-color: red;
-  width: 11vw;
+  width: 12vw;
   font-size: .7em;
   padding: 2px 0px;
   white-space: nowrap;
